# minecraft-ai-sidecar

./: .cspell.json  .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: overview.md
docs/community/: README.md
docs/embeddings/: README.md
docs/intent_classifier/: README.md
docs/official_docs/: README.md
docs/orchestrator/: README.md
docs/paxel/: session_guide.md
docs/wiki_coverage/: collect_wiki_pages.py  database_comparison.md  wiki_pages_discovered.md
docs/wiki_rag/: README.md
src/minecraft_ai_helper/: __main__.py  config.py  llm.py
src/minecraft_ai_helper/agents/: community.py  intent_classifier.py  official_docs.py  orchestrator.py  wiki_rag.py
src/minecraft_ai_helper/pipeline/: chunker.py  ingestor.py  scraper.py
src/minecraft_ai_helper/server/: app.py  models.py
tests/: conftest.py
tests/agents/: test_wiki_rag.py
tests/connectivity/: test_ollama.py  test_tavily.py  test_wiki_api.py
tests/pipeline/: test_wiki_rag_in_pipeline.py
