[project]
name = "minecraft-ai-helper"
version = "0.1.0"
description = "AI-powered Minecraft assistant with in-game HUD overlay via RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.45.0",
    "openai>=1.0.0",
    "chromadb>=0.6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "tavily-python>=0.5.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.scripts]
minecraft-ai = "minecraft_ai_helper.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/minecraft_ai_helper"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s  %(message)s"
log_cli_date_format = "%H:%M:%S"
